--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="picture">Picture</string>
-	<string name="select_intro">Long-press a thumbnail to add an image</string>
-	<string name="show_intro">Press a thumbnail to display at larger size</string>
+	<string name="longpress">Long-press a thumbnail to add view larger image</string>
 	<string name="event">Event:</string>
 	<string name="place">Avenue:</string>
 	<string name="date">Date:</string>
